# cpp-soaplib

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  sonar-project.properties
assets/: cfg-auth.xml  cfg-aws.xml  cfg-dws.xml  cfg-tws.xml  cfg-uws.xml
assets/wsdl/: AuthenticationService.wsdl  DispatcherService.wsdl  UserManagementService.wsdl  dilbert.wsdl
cmake/: FindSphinx.cmake  README.md  buildinfo.cmake  clang-format.cmake  clang-tidy.cmake  compiler_warnings.cmake  debug.cmake  digsysfn.cmake  embedded_resources.cmake  embedded_resources.md  install_paths.cmake  install_paths.md  library_suffix.cmake  library_suffix.md  os_info.cmake  packaging.cmake  scm_info.cmake  scm_info.md  warnings.cmake
contrib/: CMakeLists.txt
contrib/Catch2-2.13.3/: CMakeLists.txt
contrib/argparse/: CMakeLists.txt
contrib/cpp-httplib-0.2.5/_build/: httplibConfig.cmake
contrib/cpp-httplib-0.5.1/: httplibConfig.cmake
contrib/cpp-httplib-0.9.9/: CMakeLists.txt
contrib/libs/share/httplib/cmake/: httplibConfig.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst
docs/doxygen/: custom.css
source/: CMakeLists.txt
source/admin/: CMakeLists.txt
source/admin/authentication/: CMakeLists.txt
source/client/: AuthenticationService.cpp  AuthenticationService.hpp  CMakeLists.txt  IAuthenticationService.cpp  IAuthenticationService.h  IAuthenticationService_GetPublicKey.h  client.cpp  encrypt.cpp  encrypt.hpp  test.hpp  test1.cpp
source/examples/: CMakeLists.txt
source/examples/calculator/: CMakeLists.txt  config.xml.in  main.cpp
source/examples/country/: CMakeLists.txt  config.xml.in  main.cpp
source/soapgen/: CMakeLists.txt  main.cpp  wsdl.cpp  wsdl.hpp
source/soapgen/cppgen/: CMakeLists.txt  cppgen.cpp  cppgen.hpp  genAnyTypeHeader.cpp  genAnyTypeHeader.hpp  genAnyTypeImpl.cpp  genAnyTypeImpl.hpp  genCMakeLists.cpp  genCMakeLists.hpp  genServiceHeader.cpp  genServiceHeader.hpp  genServiceHelper.cpp  genServiceHelper.hpp  genServiceImpl.cpp  genServiceImpl.hpp  genTypeHeader.cpp  genTypeHeader.hpp  genTypeImpl.cpp  genTypeImpl.hpp  options.hpp  typeMap.cpp  typeMap.hpp  utils.cpp  utils.hpp
source/soaplib/: CMakeLists.txt  basicTypes.cpp  basicTypes.hpp  cpp-soaplibConfig.cmake  parseHelper.cpp  parseHelper.hpp  soapClient.cpp  soapClient.hpp  soapException.cpp  soapException.hpp  soapMessage.hpp  soapService.cpp  soapService.hpp  soaplibConfig.cmake
source/soaplib/types/: base64.cpp  base64.h  dateTypes.cpp  dateTypes.hpp  duration.cpp  duration.hpp  simpleTypes.cpp  simpleTypes.hpp  soapBaseType.hpp  timestamp.cpp  timestamp.hpp  uuid.cpp  uuid.hpp
source/soaplib/xml/: CMakeLists.txt  document.cpp  document.hpp  exception.hpp  node.cpp  node.hpp  xml.cpp  xml.hpp
source/unit_tests/: CMakeLists.txt  parser_tests.cpp  pointer_tests.cpp  type_tests.cpp  unit_tests.cpp  unit_tests.hpp  xml_tests.cpp
source/unit_tests/fixtures/: FileMetadata_GetListResponse.xml  simple.xml
