# 2019-10-23 11:12:06.741257

add_library(
  AuthenticationService
  STATIC
  AuthenticationService.cpp
  AuthenticationService.hpp
  types/Echo.cpp
  types/Echo.hpp
  types/EchoResponse.cpp
  types/EchoResponse.hpp
  types/LogOnBasic.cpp
  types/LogOnBasic.hpp
  types/LogOnBasicResponse.cpp
  types/LogOnBasicResponse.hpp
  types/LogOnLdap.cpp
  types/LogOnLdap.hpp
  types/LogOnLdapResponse.cpp
  types/LogOnLdapResponse.hpp
  types/LogOff.cpp
  types/LogOff.hpp
  types/LogOffResponse.cpp
  types/LogOffResponse.hpp
  types/GetPublicKey.cpp
  types/GetPublicKey.hpp
  types/GetPublicKeyResponse.cpp
  types/GetPublicKeyResponse.hpp
  types/RefreshToken.cpp
  types/RefreshToken.hpp
  types/RefreshTokenResponse.cpp
  types/RefreshTokenResponse.hpp
  types/GetVersionInformation.cpp
  types/GetVersionInformation.hpp
  types/GetVersionInformationResponse.cpp
  types/GetVersionInformationResponse.hpp
  types/GetDbVersionInformation.cpp
  types/GetDbVersionInformation.hpp
  types/GetDbVersionInformationResponse.cpp
  types/GetDbVersionInformationResponse.hpp
  types/GetLogLevel.cpp
  types/GetLogLevel.hpp
  types/GetLogLevelResponse.cpp
  types/GetLogLevelResponse.hpp
  types/SetLogLevel.cpp
  types/SetLogLevel.hpp
  types/SetLogLevelResponse.cpp
  types/SetLogLevelResponse.hpp
  types/GetLogOnStat.cpp
  types/GetLogOnStat.hpp
  types/GetLogOnStatResponse.cpp
  types/GetLogOnStatResponse.hpp
  types/GetConfiguredLdapCodes.cpp
  types/GetConfiguredLdapCodes.hpp
  types/GetConfiguredLdapCodesResponse.cpp
  types/GetConfiguredLdapCodesResponse.hpp
  types/LogOnDCRequest.cpp
  types/LogOnDCRequest.hpp
  types/LogOnDCResponse.cpp
  types/LogOnDCResponse.hpp
  types/LogOnLdapDCRequest.cpp
  types/LogOnLdapDCRequest.hpp
  types/LogOnLdapDCResponse.cpp
  types/LogOnLdapDCResponse.hpp
  types/LogOffDCRequest.cpp
  types/LogOffDCRequest.hpp
  types/LogOffDCResponse.cpp
  types/LogOffDCResponse.hpp
  types/GetPublicKeyDCResponse.cpp
  types/GetPublicKeyDCResponse.hpp
  types/RefreshTokenDCRequest.cpp
  types/RefreshTokenDCRequest.hpp
  types/RefreshTokenDCResponse.cpp
  types/RefreshTokenDCResponse.hpp
  types/LogOnStatDC.cpp
  types/LogOnStatDC.hpp
  types/ArrayOfLogOnStatInfoDC.cpp
  types/ArrayOfLogOnStatInfoDC.hpp
  types/LogOnStatInfoDC.cpp
  types/LogOnStatInfoDC.hpp
  types/GetLdapCodeDCResponse.cpp
  types/GetLdapCodeDCResponse.hpp
  types/LogOnDCRequestBase.cpp
  types/LogOnDCRequestBase.hpp
  types/LogOnDCResponseBase.cpp
  types/LogOnDCResponseBase.hpp
  types/LogOffDCRequestBase.cpp
  types/LogOffDCRequestBase.hpp
  types/LogOffDCResponseBase.cpp
  types/LogOffDCResponseBase.hpp
  types/ApiResultDC.cpp
  types/ApiResultDC.hpp
  types/DCHeader.cpp
  types/DCHeader.hpp
  types/GenericDBActionDCRequestBase.cpp
  types/GenericDBActionDCRequestBase.hpp
  types/GenericDBActionDCResponseBase.cpp
  types/GenericDBActionDCResponseBase.hpp
  types/LogLevelDC.cpp
  types/LogLevelDC.hpp
  types/ArrayOfLocalizableMessageDC.cpp
  types/ArrayOfLocalizableMessageDC.hpp
  types/LocalizableMessageDC.cpp
  types/LocalizableMessageDC.hpp
  types/ArrayOfdateTime.cpp
  types/ArrayOfdateTime.hpp
  types/ArrayOfKeyValueOfstringstring.cpp
  types/ArrayOfKeyValueOfstringstring.hpp
  types/ArrayOfstring.cpp
  types/ArrayOfstring.hpp

)

add_library(
  admin::AuthenticationService
  ALIAS
  AuthenticationService
)

target_link_libraries(
  AuthenticationService
  PUBLIC
  soaplib::soaplib
)

target_include_directories(
  AuthenticationService
  PUBLIC
  ${CMAKE_CURRENT_SOURCE_DIR}                   # .
  ${CMAKE_CURRENT_SOURCE_DIR}/../..             # admin/authentication
)
